--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,6 @@
     <body>
         {% include '_partials/_nav.html.twig' %}
         {% block body %}{% endblock %}
-        {% include '_partials/_footer.html.twig' %}
+{#        {% include '_partials/_footer.html.twig' %}#}
     </body>
 </html>
