:hammer: construction de la navbar v2

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,9 +7,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 {#        Feuilles de styles #}
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
         <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
         {% block stylesheets %}{% endblock %}
-        <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
+
 
 {#        Fichier JS #}
         <script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}" defer></script>
