--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -10,9 +10,7 @@
 body {
     min-height: 100vh;
     background-size: cover;
-    background: url('img/background2.jpg') no-repeat;
-    background-position: center;
-
+    background: url('img/background2.jpg') no-repeat center;
 }
 
 .header {
@@ -21,10 +19,36 @@ body {
     left: 0;
     width: 100%;
     padding: 1.3rem 10%;
-    background: rgba(0, 0, 0, .1);
     display: flex;
     justify-content: space-between;
     z-index: 100;
+}
+
+.header::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .1);
+    backdrop-filter: blur(50px);
+    z-index: -1;
+}
+
+.header::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
+    transition: .5s;
+}
+
+.header:hover::after {
+    left: 100%;
 }
 
 .logo {
@@ -34,10 +58,82 @@ body {
     font-weight: 700;
 }
 
-.navbar a {
+.navbar-css a {
     font-size: 1.5rem;
     color: #fff;
     text-decoration: none;
     font-weight: 500;
     margin-left: 2.5rem;
+}
+
+#check {
+    display: none;
+}
+
+.icons {
+    position: absolute;
+    right: 5%;
+    font-size: 2.8rem;
+    color: #fff;
+    cursor: pointer;
+    display: none;
+}
+
+/* Breakpoints */
+@media (max-width: 992px) {
+    .header {
+        padding: 1.3rem 5%;
+    }
+}
+
+@media (max-width: 768px) {
+    .icons {
+        display: inline-flex;
+    }
+
+    #check:checked~.icons #menu-icon {
+        display: none;
+    }
+
+    .icons #close-icon {
+        display: none;
+    }
+
+    #check:checked~.icons #close-icon {
+        display: block;
+    }
+
+    .navbar-css {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 0;
+        background: rgba(0, 0, 0, .1);
+        backdrop-filter: blur(50px);
+        box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
+        overflow: hidden;
+        transition: .3s ease;
+
+    }
+
+    #check:checked~.navbar-css {
+        height: 17.7rem;
+    }
+
+    .navbar-css a {
+        display: block;
+        font-size: 1.1rem;
+        margin: 1.5rem 0;
+        text-align: center;
+        transform: translateY(-50px);
+        opacity: 0;
+        transition: .3s ease;
+    }
+
+    #check:checked~.navbar-css a {
+        transform: translateY(0);
+        opacity: 1;
+        transition-delay: calc(.15s * var(--i));
+    }
 }
