--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -1,54 +1,17 @@
-{#<!-- Navbar -->#}
-{#<nav class="navbar navbar-expand-lg navbar-dark bg-transparent">#}
-{#    <div class="container">#}
-{#        <!-- Logo -->#}
-{#        <a class="navbar-brand" href="#">TheGoldenGun</a>#}
-{#        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">#}
-{#            <span class="navbar-toggler-icon"></span>#}
-{#        </button>#}
-{#        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">#}
-{#            <div class="offcanvas-header">#}
-{#                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>#}
-{#                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>#}
-{#            </div>#}
-{#            <div class="offcanvas-body">#}
-{#                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">#}
-{#                    <li class="nav-item">#}
-{#                        <a class="nav-link active" aria-current="page" href="#">Home</a>#}
-{#                    </li>#}
-{#                    <li class="nav-item">#}
-{#                        <a class="nav-link" href="#">Link</a>#}
-{#                    </li>#}
-{#                    <li class="nav-item dropdown">#}
-{#                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">#}
-{#                            Dropdown#}
-{#                        </a>#}
-{#                        <ul class="dropdown-menu">#}
-{#                            <li><a class="dropdown-item" href="#">Action</a></li>#}
-{#                            <li><a class="dropdown-item" href="#">Another action</a></li>#}
-{#                            <li>#}
-{#                                <hr class="dropdown-divider">#}
-{#                            </li>#}
-{#                            <li><a class="dropdown-item" href="#">Something else here</a></li>#}
-{#                        </ul>#}
-{#                    </li>#}
-{#                </ul>#}
-{#                <form class="d-flex mt-3" role="search">#}
-{#                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">#}
-{#                    <button class="btn btn-outline-success" type="submit">Search</button>#}
-{#                </form>#}
-{#            </div>#}
-{#        </div>#}
-{#    </div>#}
-{#</nav>#}
 <header class="header">
-    <a href="#" class="logo">Logo</a>
+    <a href="#" class="logo">TheGoldenGun</a>
 
-    <nav class="navbar">
-        <a href="#">Accueil</a>
-        <a href="#">Category</a>
-        <a href="#">Contact</a>
-        <a href="#">Services</a>
-        <a href="#">A propos</a>
+    <input type="checkbox" id="check">
+    <label for="check" class="icons">
+        <i class="bx bx-menu" id="menu-icon"></i>
+        <i class="bx bx-x" id="close-icon"></i>
+    </label>
+
+    <nav class="navbar-css">
+        <a href="#" style="--i:0;">Accueil</a>
+        <a href="#" style="--i:1;">Category</a>
+        <a href="#" style="--i:2;">Contact</a>
+        <a href="#" style="--i:3;">Services</a>
+        <a href="#" style="--i:4;">A propos</a>
     </nav>
 </header>
