--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -1,13 +1,22 @@
-<footer class="container-fluid bg-light">
+<footer>
     <div class="row">
-        <section class="col">
-            Insta
-        </section>
-        <section class="col">
-            Face
-        </section>
-        <section class="col">
-            Youtu
-        </section>
+        <div class="col">
+            <a href="#" class="logo logo-footer">TheGoldenGun</a>
+            <p>Bonjour bienvenue sur le site TheGoldenGun</p>
+        </div>
+        <div class="col">
+            <h3>Siège</h3>
+            <p>Rue de paix</p>
+            <p>Paris, Ile de France</p>
+            <p>75010, France</p>
+            <p>geoffreyfleur@gmail.com</p>
+            <h4>+33 344051234</h4>
+        </div>
+        <div class="col">
+
+        </div>
+        <div class="col">
+
+        </div>
     </div>
 </footer>
