--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -9,9 +9,8 @@
 
     <nav class="navbar-css">
         <a href="#" style="--i:0;">Accueil</a>
-        <a href="#" style="--i:1;">Category</a>
-        <a href="#" style="--i:2;">Contact</a>
-        <a href="#" style="--i:3;">Services</a>
-        <a href="#" style="--i:4;">A propos</a>
+        <a href="#" style="--i:1;">Catégories</a>
+        <a href="#" style="--i:3;"><i class='bx bx-user'></i></a>
+        <a href="#" style="--i:4;"><i class='bx bx-cart'></i></a>
     </nav>
 </header>
