--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -1,22 +1,43 @@
 <footer>
-    <div class="row">
-        <div class="col">
+    <div class="row-css">
+        <div class="col-css">
             <a href="#" class="logo logo-footer">TheGoldenGun</a>
             <p>Bonjour bienvenue sur le site TheGoldenGun</p>
         </div>
-        <div class="col">
-            <h3>Siège</h3>
+        <div class="col-css">
+            <h3>Contact</h3>
             <p>Rue de paix</p>
             <p>Paris, Ile de France</p>
             <p>75010, France</p>
-            <p>geoffreyfleur@gmail.com</p>
+            <p class="email-id">geoffreyfleur@gmail.com</p>
             <h4>+33 344051234</h4>
         </div>
-        <div class="col">
-
+        <div class="col-css">
+            <h3>Liens</h3>
+            <ul>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">Catégories</a></li>
+                <li><a href="#">Mon compte</a></li>
+                <li><a href="#">Panier</a></li>
+                <li><a href="#">Home</a></li>
+            </ul>
         </div>
-        <div class="col">
-
+        <div class="col-css">
+            <h3>Newsletter</h3>
+            <form action="">
+                <i class='bx bxs-envelope'></i>
+                <label>
+                    <input type="email" placeholder="Entrez votre email">
+                </label>
+                <button type="submit"><i class='bx bxs-right-arrow-alt'></i></button>
+            </form>
+            <div class="social-icons">
+                <i class='bx bxl-facebook-circle'></i>
+                <i class='bx bxl-whatsapp-square'></i>
+                <i class='bx bxl-youtube'></i>
+                <i class='bx bxl-linkedin-square' ></i>
+                <i class='bx bxl-instagram-alt' ></i>
+            </div>
         </div>
     </div>
 </footer>
