--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -10,16 +10,16 @@
             <p>Paris, Ile de France</p>
             <p>75010, France</p>
             <p class="email-id">geoffreyfleur@gmail.com</p>
-            <h4>+33 344051234</h4>
+            <h4 class="h4-num-footer">+33 344051234</h4>
         </div>
         <div class="col-css">
             <h3>Liens</h3>
-            <ul>
-                <li><a href="#">Accueil</a></li>
-                <li><a href="#">Catégories</a></li>
-                <li><a href="#">Mon compte</a></li>
-                <li><a href="#">Panier</a></li>
-                <li><a href="#">Home</a></li>
+            <ul class="ul-footer">
+                <li class="ul-footer"><a href="#">Accueil</a></li>
+                <li class="ul-footer"><a href="#">Catégories</a></li>
+                <li class="ul-footer"><a href="#">Mon compte</a></li>
+                <li class="ul-footer"><a href="#">Panier</a></li>
+                <li class="ul-footer"><a href="#">Contacts</a></li>
             </ul>
         </div>
         <div class="col-css">
@@ -27,7 +27,7 @@
             <form action="">
                 <i class='bx bxs-envelope'></i>
                 <label>
-                    <input type="email" placeholder="Entrez votre email">
+                    <input class="input-footer" type="email" placeholder="Entrez votre email">
                 </label>
                 <button type="submit"><i class='bx bxs-right-arrow-alt'></i></button>
             </form>
@@ -40,4 +40,6 @@
             </div>
         </div>
     </div>
+    <hr>
+    <p class="copyright">Geoffrey Fleur 2023 © - All Rights Reserved</p>
 </footer>
