:hammer: Finition du footer

--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -5,7 +5,7 @@
             <p>Bonjour bienvenue sur le site TheGoldenGun</p>
         </div>
         <div class="col-css">
-            <h3>Contact</h3>
+            <h3>Contact <div class="underline"><span></span></div></h3>
             <p>Rue de paix</p>
             <p>Paris, Ile de France</p>
             <p>75010, France</p>
@@ -13,7 +13,7 @@
             <h4 class="h4-num-footer">+33 344051234</h4>
         </div>
         <div class="col-css">
-            <h3>Liens</h3>
+            <h3>Liens <div class="underline"><span></span></div></h3>
             <ul class="ul-footer">
                 <li class="ul-footer"><a href="#">Accueil</a></li>
                 <li class="ul-footer"><a href="#">Catégories</a></li>
@@ -23,7 +23,7 @@
             </ul>
         </div>
         <div class="col-css">
-            <h3>Newsletter</h3>
+            <h3>Newsletter <div class="underline"><span></span></div></h3>
             <form action="">
                 <i class='bx bxs-envelope'></i>
                 <label>
