--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -269,6 +269,47 @@ hr {
     text-align: center;
 }
 
-.ul-footer ol, ul {
-    padding-left: 0;
+.underline {
+    width: 100%;
+    height: 5px;
+    background: #fff;
+    border-radius: 3px;
+    position: absolute;
+    top: 25px;
+    left: 0;
+    overflow: hidden;
+}
+
+.underline span {
+    width: 15px;
+    height: 100%;
+    background: #b87c79;
+    border-radius: 3px;
+    position: absolute;
+    top: 0;
+    left: 10px;
+    animation: moving 2s linear infinite;
+}
+
+@keyframes moving {
+    0% {
+        left: -20px;
+    }
+    100% {
+        left: 100%;
+    }
+}
+
+@media (max-width: 700px) {
+    footer {
+        bottom: unset;
+    }
+
+    .col-css {
+        flex-basis: 100%;
+    }
+
+    .col-css:nth-child(2), .col-css:nth-child(3) {
+        flex-basis: 100%;
+    }
 }
