:hammer: Amélioration design

--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -1,7 +1,7 @@
 <footer>
     <div class="row-css">
         <div class="col-css">
-            <a href="#" class="logo logo-footer">TheGoldenGun</a>
+            <a href="#" class="logo logo-footer"><img src="{{ asset('assets/css/img/logoreel.png') }}" alt=""></a>
             <p>Bonjour bienvenue sur le site TheGoldenGun</p>
         </div>
         <div class="col-css">
