--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -1,16 +1,18 @@
-<header class="header">
-    <a href="#" class="logo">TheGoldenGun</a>
+<div class="container">
+    <header class="header">
+        <a href="#" class="logo"><img src="{{ asset('assets/css/img/logoreel.png') }}" alt="logo" class="w-48"></a>
 
-    <input type="checkbox" id="check">
-    <label for="check" class="icons">
-        <i class="bx bx-menu" id="menu-icon"></i>
-        <i class="bx bx-x" id="close-icon"></i>
-    </label>
+        <input type="checkbox" id="check">
+        <label for="check" class="icons">
+            <i class="bx bx-menu" id="menu-icon"></i>
+            <i class="bx bx-x" id="close-icon"></i>
+        </label>
 
-    <nav class="navbar-css">
-        <a href="#" style="--i:0;">Accueil</a>
-        <a href="#" style="--i:1;">Catégories</a>
-        <a href="#" style="--i:3;"><i class='bx bx-user'></i></a>
-        <a href="#" style="--i:4;"><i class='bx bx-cart'></i></a>
-    </nav>
-</header>
+        <nav class="navbar-css">
+            <a href="#" style="--i:0;">Accueil</a>
+            <a href="#" style="--i:1;">Catégories</a>
+            <a href="#" style="--i:3;"><i class='bx bx-user'></i></a>
+            <a href="#" style="--i:4;"><i class='bx bx-cart'></i></a>
+        </nav>
+    </header>
+</div>
