--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -10,7 +10,7 @@
 body {
     min-height: 100vh;
     background-size: cover;
-    background: url('img/background2.jpg') no-repeat center;
+    background: black no-repeat center;
 }
 
 /* Navbar */
@@ -33,7 +33,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, .1);
+    background: linear-gradient(90deg, transparent, rgb(184,124,121), transparent);
     backdrop-filter: blur(50px);
     z-index: -1;
 }
