--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,12 +8,12 @@
 
 {#        Feuilles de styles #}
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
         {% block stylesheets %}{% endblock %}
 
 
 {#        Fichier JS #}
-
         {% block javascripts %}{% endblock %}
     </head>
     <body>
