--- a/templates/_partials/_footer.html.twig
+++ b/templates/_partials/_footer.html.twig
@@ -1,8 +1,8 @@
 <footer>
     <div class="row-css">
         <div class="col-css">
-            <a href="#" class="logo logo-footer"><img src="{{ asset('assets/css/img/logoreel.png') }}" alt=""></a>
-            <p>Bonjour bienvenue sur le site TheGoldenGun</p>
+            <a href="#" class="logo logo-footer"><img src="{{ asset('assets/css/img/logoreel.png') }}" alt="logo" class="p-5"></a>
+            <p>Aenean et venenatis risus. Etiam sit amet elit enim. Maecenas a urna malesuada, consectetur ligula ut, placerat velit. Sed eleifend malesuada mauris, vel tincidunt justo sollicitudin id. Vestibulum eleifend velit nec nunc aliquam, id aliquet orci pretium. Maecenas eu ex a eros condimentum gravida ut sit amet mauris. Sed sagittis mi massa, vitae tincidunt ante lobortis imperdiet. Fusce enim metus, malesuada nec libero a.</p>
         </div>
         <div class="col-css">
             <h3>Contact <div class="underline"><span></span></div></h3>
