--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -2,5 +2,37 @@
 
 {% block body %}
 
+    <div class="main-container">
+        <div class="card" style="--clr: #009688">
+            <div class="imgBx">
+                <img src="{{ asset('assets/css/img/222109.jpg') }}" alt="produit">
+            </div>
+            <div class="content">
+                <h2>Bonjour</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>
+                <a href="#">Read more</a>
+            </div>
+        </div>
+        <div class="card" style="--clr: #ff3e7f">
+            <div class="imgBx">
+                <img src="{{ asset('assets/css/img/background.jpg') }}" alt="produit">
+            </div>
+            <div class="content">
+                <h2>Comment</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>
+                <a href="#">Read more</a>
+            </div>
+        </div>
+        <div class="card" style="--clr: #04a9f4">
+            <div class="imgBx">
+                <img src="{{ asset('assets/css/img/background2.jpg') }}" alt="produit">
+            </div>
+            <div class="content">
+                <h2>Ca va?</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>
+                <a href="#">Read more</a>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
