:hammer: création du contenu index

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -8,7 +8,7 @@
                 <img src="{{ asset('assets/css/img/222109.jpg') }}" alt="produit">
             </div>
             <div class="content">
-                <h2>Bonjour</h2>
+                <h2>Yula</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>
                 <a href="#">Read more</a>
             </div>
@@ -18,7 +18,7 @@
                 <img src="{{ asset('assets/css/img/background.jpg') }}" alt="produit">
             </div>
             <div class="content">
-                <h2>Comment</h2>
+                <h2>je te</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>
                 <a href="#">Read more</a>
             </div>
@@ -28,7 +28,7 @@
                 <img src="{{ asset('assets/css/img/background2.jpg') }}" alt="produit">
             </div>
             <div class="content">
-                <h2>Ca va?</h2>
+                <h2>Veu</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>
                 <a href="#">Read more</a>
             </div>
