--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -25,7 +25,7 @@ body {
 /* Navbar */
 
 .header {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -153,7 +153,7 @@ body {
 
 footer {
     width: 100%;
-    position: sticky;
+    position: fixed;
     bottom: 0;
     background: linear-gradient(90deg, transparent, var(--secondary-color-dark), transparent);
     color: #fff;
@@ -335,6 +335,7 @@ hr {
     gap: 100px 50px;
     padding: 100px 50px;
     margin-top: 6em;
+    background: red;
 
 }
 
