--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -2,37 +2,47 @@
 
 {% block body %}
 
-    <div class="main-container">
-        <div class="card" style="--clr: #009688">
-            <div class="imgBx">
-                <img src="{{ asset('assets/css/img/222109.jpg') }}" alt="produit">
+    <section class="main">
+        <div class="card-text">
+            <div class="titre">
+                <h1>Bienvenue sur le site The Golden Gun</h1>
             </div>
-            <div class="content">
-                <h2>Yula</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>
-                <a href="#">Read more</a>
+            <div class="text-bandeau">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et non provident saepe vel veritatis. Asperiores facere modi ratione vel velit.</p>
             </div>
         </div>
-        <div class="card" style="--clr: #ff3e7f">
-            <div class="imgBx">
-                <img src="{{ asset('assets/css/img/background.jpg') }}" alt="produit">
+        <div class="main-container">
+            <div class="card" style="--clr: #009688">
+                <div class="imgBx">
+                    <img src="{{ asset('assets/css/img/222109.jpg') }}" alt="produit">
+                </div>
+                <div class="content">
+                    <h2>Salam</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>
+                    <a href="#">Read more</a>
+                </div>
             </div>
-            <div class="content">
-                <h2>je te</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>
-                <a href="#">Read more</a>
+            <div class="card" style="--clr: #ff3e7f">
+                <div class="imgBx">
+                    <img src="{{ asset('assets/css/img/background.jpg') }}" alt="produit">
+                </div>
+                <div class="content">
+                    <h2>Shalom</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>
+                    <a href="#">Read more</a>
+                </div>
+            </div>
+            <div class="card" style="--clr: #04a9f4">
+                <div class="imgBx">
+                    <img src="{{ asset('assets/css/img/background2.jpg') }}" alt="produit">
+                </div>
+                <div class="content">
+                    <h2>Salut</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>
+                    <a href="#">Read more</a>
+                </div>
             </div>
         </div>
-        <div class="card" style="--clr: #04a9f4">
-            <div class="imgBx">
-                <img src="{{ asset('assets/css/img/background2.jpg') }}" alt="produit">
-            </div>
-            <div class="content">
-                <h2>Veu</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>
-                <a href="#">Read more</a>
-            </div>
-        </div>
-    </div>
+    </section>
 
 {% endblock %}
